--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,20 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "About Me"
+    url: /about-me/   
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Publications"
+    url: /publications/   
 
   - title: "Teaching"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
     
+  - title: "Resources"
+    url: /resources/
+    
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
