--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Denise Mae Chua"
   avatar           : 
-  bio              : 
+  bio              : "Speech and Language Pathologist"
   location         : "Hong Kong"
   employer         :
   pubmed           : 
