--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Denise Mae Chua"
   avatar           : 
-  bio              : "Speech and Language Pathologist"
+  bio              : "Speech and Language Pathologist. Ph.D. Student at the University of Hong Kong, Swallowing Research Laboratory"
   location         : "Hong Kong"
   employer         :
   pubmed           : 
