--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Denise Mae Chua"
   avatar           : 
-  bio              : "Speech and Language Pathologist. Ph.D. Student at the University of Hong Kong, Swallowing Research Laboratory"
+  bio              : "Speech Language Pathologist <br> <br> Ph.D student at the University of Hong Kong, <a style='color: black;' href='https://swallow.edu.hku.hk/'>Swallowing Research Laboratory</a>"
   location         : "Hong Kong"
   employer         :
   pubmed           : 
