--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Denise Mae Chua"
 title_separator          : "-"
 name                     : &name "Denise Mae Chua"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://dnsemae.github.io/dmchua.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "dnsemae.github.io/dmchua.github.io/"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
