--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Denise Mae Chua"
 title_separator          : "-"
 name                     : &name "Denise Mae Chua"
 description              : &description "personal description"
-url                      : "http://dnsemae.github.io/dmchua.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "http://dnsemae.github.io/dmchua.github.io/" # the subpath of your site, e.g. "/blog"
+url                      : "https://dnsemae.github.io/dmchua.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "https://dnsemae.github.io/dmchua.github.io/" # the subpath of your site, e.g. "/blog"
 repository               : "dnsemae/dmchua.github.io/"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
