--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,10 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Research"
     url: /publications/   
 
   - title: "Teaching"
     url: /teaching/    
-        
-  - title: "Blog Posts"
-    url: /year-archive/
     
   - title: "Resources"
     url: /resources/
