--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Denise Mae Chua"
-  avatar           : "dp.jpg"
+  avatar           : "dp1.jpg"
   bio              : "Speech Language Pathologist <br> <br> Ph.D. student at the University of Hong Kong, <a style='color: black;' href='https://swallow.edu.hku.hk/'>Swallowing Research Laboratory</a>"
   location         : "Hong Kong"
   employer         :
