--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-
+  wordpress        : "dmchua"
 
 # Reading Files
 include:
