--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Denise Mae Chua"
   avatar           : "phdphoto.jpeg"
-  bio              : "Speech Language Pathologist <br> <br> Ph.D. candidate at the University of Hong Kong, <a style='color: black;' href='https://swallow.edu.hku.hk/'>Swallowing Research Laboratory</a>"
+  bio              : "Speech-Language Pathologist and Researcher <br> at the <a style='color: black;' href='https://swallow.edu.hku.hk/'>Swallowing Research Laboratory</a>, University of Hong Kong"
   location         : "Hong Kong"
   employer         :
   pubmed           : 
