--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Hong Kong"
   employer         :
   pubmed           : 
-  googlescholar    : "citations?user=QPvlf3cAAAAJ&hl=en"
+  googlescholar    : "<href='https://scholar.google.com/citations?user=QPvlf3cAAAAJ&hl=en'>"
   email            : "dmchua@connect.hku.hk"
   researchgate     :
   uri              :
