--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Denise Mae Chua"
+title                    : "Denise Chua"
 title_separator          : "-"
-name                     : &name "Denise Mae Chua"
+name                     : &name "Denise Chua"
 description              : &description "personal description"
 url                      : "https://dmchua.github.io/about-me" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "dmchua/about-me"
+repository               : "dchua/about-me"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
