--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Denise Chua"
 title_separator          : "-"
 name                     : &name "Denise Chua"
 description              : &description "personal description"
-url                      : "https://dchua.github.io/about-me" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://dmchua.github.io/about-me" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "dchua/about-me"
+repository               : "dmchua/about-me"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
