--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Denise Mae Chua"
+  name             : "Denise Chua"
   avatar           : "phdphoto.jpeg"
   bio              : "Speech-Language Pathologist and Researcher<br><br><a style='color: black;' href='https://swallow.edu.hku.hk/'>Swallowing Research Laboratory</a>, University of Hong Kong"
   location         : "Hong Kong"
